<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_marginStart="5dp" android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp" android:layout_marginRight="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="96dp">

        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:gravity="center" android:orientation="vertical"
            android:layout_marginBottom="12dp">

            <com.forrestguice.support.widget.ImageView
                android:id="@+id/txt_about_icon"
                android:layout_width="@dimen/aboutIcon_size" android:layout_height="@dimen/aboutIcon_size" android:layout_margin="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_96dp_suntimes"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_about_name"
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:gravity="center" android:textSize="?attr/text_size_huge"
                android:textColor="?attr/date_buttonSelector" android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge" />



        </LinearLayout>

        <TextView
            android:id="@+id/txt_about_desc"
            android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp" android:layout_marginBottom="2dp"
            android:gravity="start" android:textSize="?attr/text_size_small"
            android:text="@string/app_shortdesc" />

        <TextView
            android:id="@+id/txt_about_version"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_gravity="start"
            android:text="@string/about_app_version_field" android:textSize="?attr/text_size_small"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:id="@+id/txt_about_support"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:textSize="?attr/text_size_small"
            android:text="@string/about_app_support_field" />

        <TextView
            android:id="@+id/txt_help_url"
            android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="0dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:textSize="?attr/text_size_small"
            android:text="@string/help_url"
            android:autoLink="web" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp" android:background="?attr/hrColor" android:layout_marginTop="4dp" android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/txt_about_url"
            android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="0dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:textSize="?attr/text_size_small"
            android:text="@string/help_app_url"
            android:autoLink="web" />

        <View android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="2dp" android:background="?attr/hrColor" android:layout_marginTop="4dp" android:layout_marginBottom="4dp" />

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginBottom="2dp" android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
            android:animateLayoutChanges="true">

            <CheckBox
                android:id="@+id/check_donate"
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:gravity="center_vertical" android:layout_gravity="center_vertical|start"
                android:button="?attr/checkFavorite" android:paddingLeft="8dp" android:paddingStart="8dp"
                android:checked="false"
                tools:ignore="@string/expandMore" />

            <TextView android:id="@+id/txt_donate_url" android:visibility="invisible"
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:textSize="?attr/text_size_small"
                android:text="@string/about_app_donate_field" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>