...
    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">

        <View style="?attr/sheetEdgeWeak" />

        <LinearLayout android:id="@+id/dialog_header"
            android:background="?attr/dialogFrame"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal" android:gravity="center_vertical|start">

            <com.forrestguice.support.widget.ImageButton android:id="@+id/dialog_button_cancel" style="@style/ActionButton"
                android:layout_width="wrap_content" android:layout_height="match_parent"
...
                android:id="@+id/dialog_title"
                android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
                android:gravity="start|center_vertical"
                style="@style/Base.DialogWindowTitle.AppCompat"
                android:text="@string/time_dialog_title" />

            <com.forrestguice.support.widget.ImageButton android:id="@+id/dialog_button_accept"
                style="@style/ActionButton" android:contentDescription="@string/dialog_ok"
                android:layout_width="96dp" android:layout_height="56dp" android:paddingLeft="16dp" android:paddingRight="16dp"
                android:src="?attr/icActionAccept" android:scaleType="fitCenter" android:paddingTop="14dp" android:paddingBottom="14dp"
                android:nextFocusDown="@+id/dialog_button_neutral"
                android:tint="?attr/text_accentColor" />

...
