...

        </FrameLayout>

        <Button android:id="@+id/button_online_help" android:visibility="visible"
            android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="end"
            android:textSize="?attr/text_size_small"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" android:text="@string/action_onlineHelp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="@dimen/welcomeActivity_margin" android:layout_marginRight="@dimen/welcomeActivity_margin" />

    </LinearLayout>

</com.forrestguice.support.constraint.ConstraintLayout>
